<resources>
    <string name="app_name">Entrevoisins</string>
    <string name="tab_neighbour_title">Mes voisins</string>
    <string name="tab_favorites_title">Favoris</string>
    <string name="about_me_title">À propos de moi</string>

    <!-- contentDescription -->
    <string name="avatar_desc">Avatar image of user</string>
    <string name="arrow_back_desc">Arrow back</string>

    <!-- Hardcoded strings -->
    <string name="neighbour_location">2 Rue de .....</string>
    <string name="neighbour_phone_number">+33 6 99 99 99 99</string>
    <string name="neighbour_web_url"></string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
