<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EAEEEF"
    tools:context=".ui.neighbour_list.DetailNeighbourActivity">
    <ImageView
        android:id="@+id/neighbour_avatar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="400dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/avatar_desc" />
    <TextView
        android:id="@+id/neighbour_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="16dp"
        android:textColor="#FFFFFF"
        android:textSize="33sp"
        app:layout_constraintBottom_toBottomOf="@+id/neighbour_avatar"
        app:layout_constraintStart_toStartOf="@+id/neighbour_avatar" />
    <ImageButton
        android:id="@+id/neighbour_back_btn"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@null"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:tint="#FFFFFF"
        app:srcCompat="@drawable/ic_arrow_back_black_24dp"
        android:contentDescription="@string/arrow_back_desc"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/favorite_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="320dp"
        android:layout_marginEnd="25dp"
        android:backgroundTint="#ffffff"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:rippleColor="#FFD700" />
    <android.support.constraint.ConstraintLayout
        android:id="@+id/neighbour_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/neighbour_avatar">
        <android.support.v7.widget.CardView
            android:id="@+id/neighbour_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <LinearLayout
                android:id="@+id/neighbour_layout_infos"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/neighbour_name_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:textColor="#2F4F4F"
                    android:textSize="25sp" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#EAEEEF"/>
                <TextView
                    android:id="@+id/neighbour_adress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/neighbour_location"
                    android:textColor="#727272"
                    android:textSize="15sp"
                    android:layout_margin="8dp"
                    android:drawableStart="@drawable/ic_location_on_black_24dp"
                    android:drawablePadding="12dp"
                    android:drawableTint="#FC80AC"/>
                <TextView
                    android:id="@+id/neighbour_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/neighbour_phone_number"
                    android:textColor="#727272"
                    android:textSize="15sp"
                    android:layout_margin="8dp"
                    android:drawableStart="@drawable/ic_local_phone_black_24dp"
                    android:drawablePadding="12dp"
                    android:drawableTint="#FC80AC"/>
                <TextView
                    android:id="@+id/neighbour_web"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#727272"
                    android:textSize="15sp"
                    android:layout_margin="8dp"
                    android:drawableStart="@drawable/ic_language_black_24dp"
                    android:drawablePadding="12dp"
                    android:drawableTint="#FC80AC"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:id="@+id/neighbour_about"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/neighbour_info">
            <LinearLayout
                android:id="@+id/neighbour_layout_about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/neighbour_about_me"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:text="@string/about_me_title"
                    android:textColor="#2F4F4F"
                    android:textSize="25sp" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#EAEEEF" />
                <TextView
                    android:id="@+id/neighbour_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:textColor="#727272"
                    android:justificationMode="inter_word"
                    android:textSize="15sp"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>